--- a/.github/workflows/package_builder.yml
+++ b/.github/workflows/package_builder.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - develop
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,6 +16,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          ref: develop
       
       - name: Extract repository name
         id: repo
@@ -27,8 +31,8 @@ jobs:
 
       - name: Checkout master branch
         run: |
-          git fetch origin master --tags
-          git checkout master
+          git fetch origin master
+          git checkout -B master origin/master
 
       - name: Determine version
         id: bump
@@ -105,8 +109,8 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add .
-          git commit -m "CI/CD: update UPM package to ${{ steps.tag.outputs.version }} from develop ($GITHUB_SHA)" || echo "No changes to commit"
+          git add -A
+          git commit -m "CI/CD: sync from develop (${GITHUB_SHA})" || echo "No changes"
           git push origin master
 
       - name: Tag new version
