--- a/.github/workflows/package_builder.yml
+++ b/.github/workflows/package_builder.yml
@@ -31,12 +31,12 @@ jobs:
 
       - name: Back up assets
         run: |
-          mkdir -p /Tmp
+          mkdir -p ${{ runner.temp }}/package
           if [ -d "Assets/Runtime" ]; then
-            cp -R Assets/Runtime /Tmp/Runtime
+            cp -R Assets/Runtime ${{ runner.temp }}/package/Runtime
           fi
           if [ -d "Assets/Editor" ]; then
-            cp -R Assets/Editor /Tmp/Editor
+            cp -R Assets/Editor ${{ runner.temp }}/package/Editor
           fi
 
       - name: Switch to master branch
@@ -47,7 +47,7 @@ jobs:
 
       - name: Restore assets into master branch
         run: |
-          cp -R /Tmp/* .
+          cp -R ${{ runner.temp }}/package/* .
 
       - name: Determine version
         id: bump
