--- a/.github/workflows/package_builder.yml
+++ b/.github/workflows/package_builder.yml
@@ -33,10 +33,10 @@ jobs:
         run: |
           mkdir -p ${{ runner.temp }}/package
           if [ -d "Assets/Runtime" ]; then
-            cp -R Assets/Runtime ${{ runner.temp }}/package/Runtime
+            rsync -a Assets/Runtime ${{ runner.temp }}/package/Runtime
           fi
           if [ -d "Assets/Editor" ]; then
-            cp -R Assets/Editor ${{ runner.temp }}/package/Editor
+            rsync -a Assets/Editor ${{ runner.temp }}/package/Editor
           fi
 
       - name: Switch to master branch
@@ -47,7 +47,9 @@ jobs:
 
       - name: Restore assets into master branch
         run: |
-          cp -R ${{ runner.temp }}/package/* .
+          mkdir -p Runtime Editor
+          cp -R ${{ runner.temp }}/package/Runtime/* Runtime/ || true
+          cp -R ${{ runner.temp }}/package/Editor/* Editor/ || true
 
       - name: Determine version
         id: bump
