--- a/.github/workflows/package_builder.yml
+++ b/.github/workflows/package_builder.yml
@@ -33,10 +33,12 @@ jobs:
         run: |
           mkdir -p ${{ runner.temp }}/package
           if [ -d "Assets/Runtime" ]; then
-            rsync -a Assets/Runtime ${{ runner.temp }}/package/Runtime
+            cp -R Assets/Runtime ${{ runner.temp }}/package/
+            cp Assets/Runtime.meta ${{ runner.temp }}/package/Runtime/Runtime.meta
           fi
           if [ -d "Assets/Editor" ]; then
-            rsync -a Assets/Editor ${{ runner.temp }}/package/Editor
+            cp -R Assets/Editor ${{ runner.temp }}/package/
+            cp Assets/Editor.meta ${{ runner.temp }}/package/Editor/Editor.meta
           fi
 
       - name: Switch to master branch
@@ -48,8 +50,8 @@ jobs:
       - name: Restore assets into master branch
         run: |
           mkdir -p Runtime Editor
-          cp -R ${{ runner.temp }}/package/Runtime/* Runtime/ || true
-          cp -R ${{ runner.temp }}/package/Editor/* Editor/ || true
+          cp -R ${{ runner.temp }}/package/Runtime Runtime
+          cp -R ${{ runner.temp }}/package/Editor Editor
 
       - name: Determine version
         id: bump
